Fix crash when building completion items for functions with no arguments context

I'm not sure how this situation can happen, but the referenced bug
describes code which triggers the issue. This commit just
fixes the crash which happens in that case.

BUG:341483